# library-template

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  build.bat  build.sh  conanfile.py  conanfile.txt  convert-runtime-names.py  export-pkg.sh  gen.sh  install.bat  install.sh  package.sh  run.bat  run.sh  test.bat  test.sh  utils.sh  version.hpp.in  version.py
.github/workflows/: build-test.yml  debug.yml  publish.yml  release.yml  step-by-step.yml
include/: utils.hpp
profiles/: cxx17.profile  debug-dynamic-rt.profile  debug-static-rt.profile  release-dynamic-rt.profile  release-static-rt.profile
src/: main.cpp  utils.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  main.cpp  passing-test.cpp  version_utility_agrees_with_version_hpp.cpp
